css/style.css
body {
  margin: 0;
  padding: 12px;
  font-family: Pretendard;
  box-sizing: border-box;
}

button {
  cursor: pointer;
}

#wrapper{
  max-width: 1200px;
  margin: 0 auto ;
}

/* START COMMON */

.common-title {
  font-size: 30px;
  font-weight: 700;
  line-height: 38px;
  padding-bottom: 15px;
}

.common-paragraph {
  font-size: 15px;
  font-weight: 400;
  line-height: 20px;
}

.common-subtitle {
  font-size: 15px;
  font-weight: 700;
  line-height: 22px;
  padding-bottom: 15px;
}
/* END COMMON */

/* START HERO */

.hero {
  background: url(/public/backgroud.jpg),
    linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.35) 100%), #050304;
  height: 675px;
  background-color: #ccc;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  border-radius: 40px;
}

.main {
  width: 100%;
  background: rgba(0, 0, 0, 0.5);
  height: 100%;
  border-radius: 40px;
}

.navigation {
  display: flex;
  height: 108px;
  padding: 0px 20%;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
}

.navigation .right {
  display: flex;
  height: 30px;
  padding: 0px 15px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 624px;
  background: rgba(255, 255, 255, 0.1);
  border: none;
  color: #fff;
  font-size: 8px;
  font-style: normal;
  font-weight: 500;
  line-height: 12px;
}

.navigation .left {
  width: 77px;
  height: 30px;
  flex: none;
  order: 0;
  flex-grow: 0;
  position: relative;
  cursor: pointer;
}

.navigation .left .logo {
  position: absolute;
  left: 0;
  top: 3px;
  width: 30px;
  height: 30px;
}

.navigation .left .logo1 {
  position: absolute;
  left: 22%;
  top: 9px;
  width: 44px;
  height: 14px;
}

.navigation .left .logo2 {
  position: absolute;
  left: 28%;
  top: 24px;
  width: 26px;
  height: 4px;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px 0px 25px 0px;
  gap: 15px;
}

.header .subtitle {
  text-align: center;
  font-size: 15px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: -0.12px;
  color: #fff;
  padding: 0 32%;
}

.CTA-wrapper {
  display: flex;
  justify-content: space-between;
  margin: auto;
  width: 70%;
}

.CTA-left,
.CTA-right {
  display: flex;
  flex-direction: column;
}

.CTA-left .title,
.CTA-right .title {
  color: #edc484;
  text-align: center;
  margin-bottom: 10px;
  font-size: 12px;
}

.CTA-left .download,
.CTA-right .download {
  display: flex;
  align-items: flex-start;
  gap: 15px;
  justify-content: center;
}

.CTA-left .download > img,
.CTA-right .download > img {
  position: relative;
  z-index: 2;
  cursor: pointer;
  width: 106px;
  /* height: 38px; */
}

.navigation-image {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 422px;
  width: 650px;
  margin: auto;
  background: url(/public/main-navigation-image.png) no-repeat top;
  background-size: cover;
}

.navigation-image > div {
  max-height: 312px;
  z-index: -1;
}

.navigation-image img {
  width: 100%;
  object-fit: cover;
  max-height: 531px;
}
/* END HERO */

/* START APP INTRO */
.app-intro .common-title {
  color: #997c5c;
}

.app-intro .common-paragraph {
  color: #626576;
}

.user-app-intro .common-title,
.user-app-intro .common-paragraph {
  color: #ffffff;
}

.app-intro {
  background: url(/public/app-intro-background.png) no-repeat center;
  height: 675px;
  width: 100%;
  z-index: 1;
  border-radius: 40px;
  margin-top: 10px;
}

.section-content {
  display: flex;
  flex-direction: column;
  width: 50%;
  justify-content: center;
  align-items: center;
  height: 100%;
  margin: auto;
}

.section-content .common-paragraph {
  width: 65%;
}

.app-intro .section-content {
  text-align: center;
  background: url(/public/flower-background.png) no-repeat center;
}

.user-app-intro {
  display: flex;
  border-radius: 40px;
  background: #ae8d68;
  height: 675px;
  border-radius: 40px;
  margin-top: 12px;
}

.section-media {
  flex: 2.5;
  border-radius: 40px;
  background: url(/public/user-app-intro.png) no-repeat center;
  background-size: 100% 100%;
  object-fit: cover;
}

.user-app-intro .section-content {
  flex: 1;
  margin: 0 30px;
}

.user-app-intro .section-content .common-paragraph {
  width: 95%;
}

/* END APP INTRO */

/* START GENERAL USER */
.general-user {
  border-radius: 40px;
  display: flex;
  flex-direction: row;
  height: 675px;
  margin-top: 12px;
}

.general-user .section-content {
  background: none;
}

.general-user .section-media {
  background: #e9dfd5;
  display: flex;
  justify-content: center;
  align-items: center;
}

.general-user .section-content {
  width: 29%;
  padding: 0px 50px;
  align-items: flex-start;
  align-self: stretch;
  text-align: start;
  color: #997c5c;
}

.general-user .section-content .common-paragraph {
  width: 100%;
}

.general-user .section-content .common-paragraph {
  color: #997c5c;
}

#main1 {
  background: url(/public/general-user-main1.png) no-repeat center;
  background-size: 788px 675px;
}

#main2 {
  background: url(/public/general-user-main2.png) no-repeat center;
  background-size: 788px 675px;
}

#main3 {
  background: url(/public/general-user-main3.png) no-repeat center;
  background-size: 788px 675px;
}

#main4 {
  background: url(/public/general-user-main4.png) no-repeat center;
  background-size: 788px 675px;
}

.app-intro .app-intro-top {
  background-color: #ae8d68;
  border-radius: 40px;
  height: 45%;
}

.app-intro .app-intro-top .section-content-white {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  margin: auto;
}

.app-intro .app-intro-top .section-content-white .common-title,
.app-intro .app-intro-top .section-content-white .common-paragraph {
  color: #ffffff;
  text-align: center;
  width: 44%;
}

.app-intro .app-intro-top .section-content {
  background-image: none;
}
/* ... */

